--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.container {
+  width: 100%;
+  height: 100vh;
+  background: url(https://i.redd.it/zdarxtlshg611.jpg) 100% 100% no-repeat; /* Добавляем фон */
+  background-size: cover; /* Масштабируем фон */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
