--- a/src/index.css
+++ b/src/index.css
@@ -36,12 +36,15 @@ code {
   width: 100%;
   min-height: 50px;
   text-align: center;
+  font-weight: bold;
 }
 
 .quote {
   width: 100%;
   min-height: 250px;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer {
